<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".SMA.Activity.DetailSma">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo1"
                android:layout_width="@dimen/widthCV"
                android:layout_height="@dimen/heighCV"
                android:contentDescription="@string/imgsma" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/heighCV"
                android:layout_marginStart="1dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/namaSekolah1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:text="@string/sman_1_purwakarta"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alamat1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:text="@string/alamat"
                    android:textColor="@color/colorDescription" />
            </LinearLayout>
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/detailSma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/identitas_sekolah"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/npsn"/>

        <TextView
            android:id="@+id/npsn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tahun_berdiri"/>

        <TextView
            android:id="@+id/tahun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/akreditasi"/>

        <TextView
            android:id="@+id/akreditasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnMaps1"
        android:layout_width="@dimen/widthbutton"
        android:layout_height="@dimen/heigtbutton"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/lihat_lokasi"
        android:textColor="@color/white"
        android:textSize="12sp" />
</LinearLayout>