<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cvSMA"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="@dimen/widthCV"
            android:layout_height="@dimen/heighCV"
            android:layout_margin="@dimen/marginAll"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@string/imgsma"
                    android:layout_width="@dimen/imgCV"
                    android:layout_height="@dimen/imgCV"
                    android:background="@drawable/circle1"
                    android:src="@drawable/school"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/marginTop"
                    android:text="@string/sma_negeri"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"
                    android:layout_margin="@dimen/marginTop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lihat_daftar_sma_negeri_di_purwakarta"
                    android:padding="@dimen/padding"
                    android:textColor="@color/colorDescription"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvSMK"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="@dimen/widthCV"
            android:layout_height="@dimen/heighCV"
            android:layout_margin="@dimen/marginAll"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@string/imgsmk"
                    android:layout_width="@dimen/imgCV"
                    android:layout_height="@dimen/imgCV"
                    android:background="@drawable/circle2"
                    android:src="@drawable/school"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/marginTop"
                    android:text="@string/smk_negeri"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"
                    android:layout_margin="@dimen/marginTop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lihat_daftar_smk_negeri_di_purwakarta"
                    android:padding="@dimen/padding"
                    android:textColor="@color/colorDescription"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>